[package]
name = "memory_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`


[dependencies]
anyhow = "1.0.57"
bitflags = "1.3.2"
thiserror = "1.0.31"
